Fix article list on mobile

--- a/blocks/article-list/article-list.css
+++ b/blocks/article-list/article-list.css
@@ -1,12 +1,18 @@
 .article-list {
   max-width: var(--grid-container-width);
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
   gap: var(--spacing-l);
 
   a {
     display: grid;
     text-decoration: none;
+  }
+}
+
+
+@media (width >= 900px) {
+  .article-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
